# tapedelay

./: .gitignore  .gitmodules  CMakeLists.txt
src/: TapedelayConstants.h  TapedelayEditor.h  TapedelayProcessor.cpp  TapedelayProcessor.h  UiElements.h
src/impl/: GenericImpl.h  TapeDelay.h
src/inc/: CpuMeter.h  SpectrogramDisplay.h
src/unittests/: CMakeLists.txt  TapedelayIntegration_tests.cpp  Tapedelay_tests.cpp
